src/tests/testfiles/function-calls/15.txt
testfiles/function-calls/15.c:9:5: error: unknown format code 'v'
printf("%v\n", a);
^
testfiles/function-calls/15.c:10:5: error: unknown format code 'y'
printf("%y, %l, %z\n", a, b, f);
^
testfiles/function-calls/15.c:10:5: error: unknown format code 'l'
printf("%y, %l, %z\n", a, b, f);
^
testfiles/function-calls/15.c:10:5: error: unknown format code 'z'
printf("%y, %l, %z\n", a, b, f);
^
